# RP-Sixty-Four

./: CMakeLists.txt  README.md  build.sh
docs/: DEBUGGING.md  HARDWARE_SETUP.md
src/: buttons.c  buttons.h  config.h  controller_pak.c  controller_pak.h  encoder.c  encoder.h  main.c  n64_protocol.c  n64_protocol.h  n64_protocol.pio
